# substratekitties-demo

runtime/: Cargo.toml
runtime/src/: lib.rs  substratekitties.rs
runtime/wasm/: Cargo.toml
src/: main.rs
